# project_HW_11.2

./: README.md  pyproject.toml  str_func.py
