[tool.poetry]
name = "project-hw-11-2"
version = "0.1.0"
description = ""
authors = ["Vlad Morozov <v@morosoff.ru>"]
readme = "README.md"
packages = [{include = "project_hw_11"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
